--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-This gnu/linux distribution had as intent be a flexible base where the sysadmin is who decide the type of server want build.
+This GNU/Linux distribution had as intent be a flexible base where the sysadmin is who decide the type of server want build.
 The GNU/Linux LimeRoot base is ampliable with many features called "modules" and by default have a friendly web administration page.
 The github repository called "installer" contain the installer script of GNU/Linux LimeRoot.
