--- a/README
+++ b/README
@@ -2,3 +2,5 @@ GNU/Linux LimeRoot system installer.
 A command line utility to install LR on a hard drive.
 
 Usage: LRInstaller [options]
+
+Test text
